--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "@ngrx/effects": "16",
     "@ngrx/store": "16",
     "@ngrx/store-devtools": "16",
+    "i": "^0.3.7",
+    "ngx-owl-carousel-o": "16",
+    "npm": "^10.8.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
